--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,10 @@
         
         <!-- Brython -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.10.4/brython.min.js"></script>
-        <script src="pyf_modules/pyf_modules.brython.js"></script>
-        <script src="src/src.brython.js"></script>
-        <script type="text/python" src="src/__init__.py"></script>
-        <script src="https://cdn.tailwindcss.com"></script>
+        <script src="main.{main_key}.js"></script>
+        <script type="text/python" src="__init__.py"></script>
         
-        <link rel="stylesheet" href="src/css/app.css">
+        <link rel="stylesheet" href="styles/app.css">
     </head>
     <body onload="brython()">
         <div id="app-mount">
